# Clean-Architecture-Python-

./: .gitignore  chapter 1: Clean Architecture Essentials: Transforming Python Development.md  chapter 4: Domain-Driven Design: Crafting the Core Business Logic.md  prompt.md
Book/: Prompt.md  (+2 more)
Project/: Clean Architecture.md  Clean Architecture: Entity.md  Makefile  README.md  pyproject.toml  pytest.ini
Project/src/crypto_option_arbitrage/: generate_project_structure.sh  project_structure_documentation.md
Project/src/crypto_option_arbitrage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Project/src/crypto_option_arbitrage/core/config/: asset_rules.py  market_rules.py  trading_rules.py
Project/src/crypto_option_arbitrage/core/entities/: asset.py  crypto_option.py  enums.py  etf_asset.py  etf_option.py  leverage_etf_asset.py  option.py  stock_asset.py  stock_option.py
Project/src/crypto_option_arbitrage/core/entities/asset/: asset.py  crypto_asset.py  etf_asset.py  leverage_etf_asset.py  stock_asset.py
Project/src/crypto_option_arbitrage/core/entities/enum/: enums.py
Project/src/crypto_option_arbitrage/core/entities/option/: etf_option.py  leverage_etf_option.py  option.py  stock_option.py
Project/src/crypto_option_arbitrage/core/entities/option/value_objects/: greeks.py
Project/src/crypto_option_arbitrage/tests/core/entities/: test_crypto_option.py  test_etf_asset.py  test_stock_asset.py
Project/src/crypto_option_arbitrage/tests/core/entities/asset/: test_crypto_asset.py  test_etf_asset.py  test_leverage_etf_asset.py  test_stock_asset.py
(+5 files in other folders)
