[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_option_arbitrage"
version = "0.1.0"
description = "Arbitrage Opportunity Finder for Crypto Options using Clean Architecture"
authors = [{ name = "Sajad", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
